fix footer section on mobile version

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -160,19 +160,19 @@
 @import './components/_footer-subscribe-form.scss';
 
 .footer-contacts {
-  display: flex;
-  flex-wrap: wrap;
-
   @include mobile {
-    justify-content: center;
+    display: block;
+    text-align: center;
   }
 
   @include tablet {
+    display: flex;
     flex-wrap: nowrap;
     justify-content: baseline;
   }
 
   @include desktop {
+    display: flex;
     flex-wrap: nowrap;
     justify-content: baseline;
   }
@@ -218,6 +218,10 @@
     background: url('./../images/icon/icon_mobile-320.svg') no-repeat;
     width: 20px;
     height: 20px;
+
+    @media screen and (max-width: 767px) {
+      left: 10px;
+    }
   }
 
   &::after {
